fix iOS table overflow

--- a/style.css
+++ b/style.css
@@ -90,9 +90,3 @@
   background: white;
   width: 100%;
 }
-
-::-webkit-scrollbar {
-    -webkit-appearance: none;
-    width: 7px;
-    height: 7px;
-}
